sandbox/output
FizzBuzz.java:6: error: cannot find symbol
        Handler normalNumberHandler = new NormalNumberHandler(null);
                                          ^
  symbol:   class NormalNumberHandler
  location: class FizzBuzz
FizzBuzz.java:7: error: cannot find symbol
        Handler buzzHandler = new BuzzHandler(normalNumberHandler);
                                  ^
  symbol:   class BuzzHandler
  location: class FizzBuzz
FizzBuzz.java:8: error: cannot find symbol
        Handler fizzHandler = new FizzHandler(buzzHandler);
                                  ^
  symbol:   class FizzHandler
  location: class FizzBuzz
FizzBuzz.java:9: error: cannot find symbol
        this.fizzBuzzHandler = new FizzBuzzHandler(fizzHandler);
                                   ^
  symbol:   class FizzBuzzHandler
  location: class FizzBuzz
Handler.java:1: error: Handler is not abstract and does not override abstract method handle(int) in Handler
public class Handler {
       ^
HandlerBuzz.java:2: error: constructor Handler in class Handler cannot be applied to given types;
    public HandlerBuzz(Handler successor) {
                                          ^
  required: Handler
  found: no arguments
  reason: actual and formal argument lists differ in length
HandlerFizz.java:2: error: constructor Handler in class Handler cannot be applied to given types;
    public HandlerFizz(Handler successor) {
                                          ^
  required: Handler
  found: no arguments
  reason: actual and formal argument lists differ in length
HandlerFizzBuzz.java:12: error: successor has private access in Handler
        return successor.handle(number);
               ^
HandlerNormalNumber.java:2: error: constructor Handler in class Handler cannot be applied to given types;
    public HandlerNormalNumber(Handler successor){
                                                 ^
  required: Handler
  found: no arguments
  reason: actual and formal argument lists differ in length
9 errors
